--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -31,7 +31,7 @@
             </ListBox.ItemTemplate>
         </ListBox>
 
-        <Button Grid.Row="3" Content="Smazat vše" Background="#8e44ad" Foreground="White"  Height="30" Width="92" HorizontalAlignment="Center"/>
+        <Button Grid.Row="3" Content="Smazat vše" Background="#8e44ad" Foreground="White"  Height="30" Width="92" HorizontalAlignment="Center" Click="Delete_All_Button"/>
 
     </Grid>
 </Window>
