--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -13,7 +13,8 @@
             <RowDefinition Height="4*"/>
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
-        
+
+        <TextBlock Name="Date" Grid.Row="0" FontSize="12" FontWeight="Bold" HorizontalAlignment="Right" VerticalAlignment="Top"></TextBlock>
         <TextBlock Text="To-do list" Grid.Row="0" FontSize="30" FontWeight="Bold" HorizontalAlignment="Center" VerticalAlignment="Center"></TextBlock>
         <StackPanel Grid.Row="1" Orientation="Horizontal" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="15,0">
             <TextBox Name="t1" KeyDown="t1_Keyboard" Width="335" Height="30" FontSize="15" Margin="0,0,12,0" VerticalContentAlignment="Center"></TextBox>
